--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 clap = { version = "4.5.4", features = ["derive"] }
 console = "0.15.8"
+nalgebra = "0.32.5"
 rand = "0.8.5"
 termion = "3.0.0"
 
